docs(#1): Update HTML template and README
- Enhanced index.html with meta tags
- Updated README with installation guide
- Added tech stack documentation
- Included contribution guidelines

Improves project documentation and SEO.

--- a/index-page/index.html
+++ b/index-page/index.html
@@ -2,10 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>index-page</title>
+    <title>LinuxDroid - Run Linux on Android</title>
+    <meta name="description" content="The ultimate penetration testing OS, now in your pocket. Run Kali Linux and other distributions on Android with LinuxDroid." />
+    <meta name="author" content="LinuxDroid" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <meta property="og:title" content="LinuxDroid - Run Linux on Android" />
+    <meta property="og:description" content="The ultimate penetration testing OS, now in your pocket. Run Kali Linux and other distributions on Android with LinuxDroid." />
+    <meta property="og:type" content="website" />
+
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
