--- a/index-page/index.html
+++ b/index-page/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LinuxDroid - Run Linux on Android</title>
     <meta name="description" content="The ultimate penetration testing OS, now in your pocket. Run Kali Linux and other distributions on Android with LinuxDroid." />
@@ -9,11 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
     <meta property="og:title" content="LinuxDroid - Run Linux on Android" />
     <meta property="og:description" content="The ultimate penetration testing OS, now in your pocket. Run Kali Linux and other distributions on Android with LinuxDroid." />
     <meta property="og:type" content="website" />
-
+    
   </head>
 
   <body>
